--- a/styles/base/base-style.css
+++ b/styles/base/base-style.css
@@ -62,6 +62,18 @@ p {
   margin-bottom: 3rem;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
 .container-1 {
   padding: 10rem;
 }
@@ -91,6 +103,12 @@ p {
 
 html {
   font-size: 62.5%;
+}
+
+@media (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
 }
 
 body {
