--- a/styles/global.css
+++ b/styles/global.css
@@ -62,6 +62,18 @@ p {
   margin-bottom: 3rem;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
 .container-1 {
   padding: 10rem;
 }
