--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -63,6 +63,18 @@ p {
   margin-bottom: 3rem;
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
 .container-1 {
   padding: 10rem;
 }
@@ -157,6 +169,18 @@ p {
 
 .mb-3 {
   margin-bottom: 3rem;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
 }
 
 .container-1 {
