--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -39,6 +39,17 @@ p{
     margin-bottom: 3rem;
 }
 
+// margin top
+.mt-1{
+    margin-top: 1rem;
+}
+.mt-2{
+    margin-top: 2rem;
+}
+.mt-3{
+    margin-top: 3rem;
+}
+
 //custom class
 .container-1{
     padding: 10rem;
