--- a/styles/components/header/header.css
+++ b/styles/components/header/header.css
@@ -17,6 +17,24 @@ $breakpoint arguments choice:
 - tab-land
 - big-desktop
 */
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-weight: 700;
@@ -76,6 +94,12 @@ p {
 
 .container-1 {
   padding: 10rem;
+}
+
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
 }
 
 .text-center {
