--- a/styles/pages/team-member/team-member.css
+++ b/styles/pages/team-member/team-member.css
@@ -17,6 +17,24 @@ $breakpoint arguments choice:
 - tab-land
 - big-desktop
 */
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -79,6 +97,12 @@ p {
   padding: 10rem;
 }
 
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
+}
+
 .text-center {
   text-align: center;
 }
@@ -118,6 +142,24 @@ body {
   overflow-x: hidden;
 }
 
+/*
+0 - 430px;       small-phone
+430 - 568px:     medium-phone
+568 - 600px:     phone
+600 - 1000px:    tablet portrait
+900 - 1300px:    tablet landscape
+[1300 - 1800px] is where normal style apply
+1800px + :       Big desktop
+*/
+/*
+$breakpoint arguments choice:
+- s-phone
+- M-phone
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
 /*
 0 - 430px;       small-phone
 430 - 568px:     medium-phone
@@ -195,6 +237,12 @@ p {
 
 .container-1 {
   padding: 10rem;
+}
+
+@media (max-width: 40em) {
+  .container-1 {
+    padding: 5rem;
+  }
 }
 
 .text-center {
