social business page complete with mobile responsive

--- a/styles/pages/social-business/social-business.scss
+++ b/styles/pages/social-business/social-business.scss
@@ -1,16 +1,19 @@
 @import '../../base/base-style.scss';
-@import '../../sass/variables';
 @import '../../components/button';
+@import '../../components/header/header.scss';
+
+@import '../../sass/variables';
+@import '../../sass/typography';
 @import '../../sass/mixins';
 
-.about{
-    
+.social-business{
+
     &__header{
-        background-image: url(/assets/images/gcl-header/banner-about.png);
+        background-image: url(/assets/images/gcl-header/banner-socail-business.png);
         background-size: cover;
         background-repeat: no-repeat;
         
-        height: 70vw;
+        height: 60vw;
         margin-top: -2rem;
         padding: 0 20%;
 
@@ -27,15 +30,35 @@
             text-align: center;
     
             .heading{
-                font-size: 3.2rem;
-                font-weight: 400;
+                font-size: 3.5rem;
+                font-weight: 600;
+                line-height: 4.3rem;
+
+                // @include response(phone){
+                //     font-size: 2rem;
+                //     line-height: 3.3rem;
+                // }
+            }
+
+            .name{
+                color: $text-light;
+                font-size: 2rem;
+                font-weight: 600;
+                line-height: 2.4rem;
+
+                // @include response(phone){
+                //     font-size: 1rem;
+                //     line-height: 1.4rem;
+                // }
             }
         }
     }
 
-    &__us{
+    &__social{
 
         &--heading{
+            font-weight: 600;
+            font-size: 4.8rem;
             margin-bottom: 3rem;
             text-align: center;
         }
@@ -70,6 +93,12 @@
                 grid-column: col-start 1 / col-end 1;
                 grid-row: row-start 1 / row-end 1;
                 
+                .heading{
+                    font-size: 3.6rem;
+                    font-weight: 600;
+                    line-height: 4.3rem;
+                }
+
                 @include response(phone){
                     grid-column: col-start / col-end;
                     grid-row: row-start 1 / row-end 1;
@@ -88,6 +117,12 @@
                 grid-column: col-start 2 / col-end 2;
                 grid-row: row-start 2 / row-end 2;
                 
+                .heading{
+                    font-size: 3.6rem;
+                    font-weight: 600;
+                    line-height: 4.3rem;
+                }
+
                 @include response(phone){
                     grid-column: col-start / col-end;
                     grid-row: row-start 3 / row-end 3;
@@ -106,6 +141,12 @@
                 grid-column: col-start 1 / col-end 1;
                 grid-row: row-start 3 / row-end 3;
                 
+                .heading{
+                    font-size: 3.6rem;
+                    font-weight: 600;
+                    line-height: 4.3rem;
+                }
+
                 @include response(phone){
                     grid-column: col-start / col-end;
                     grid-row: row-start 5 / row-end 5;
@@ -147,87 +188,61 @@
             }
         }
     }
-    &__contribution{
-        display: flex;
-        justify-content: center;
 
-        .text{
-            font-size: 1.3rem;
+    &__video{
+        height: 70rem;
+    }
+
+    &__goal{
+        padding: 10rem;
+
+        @include response(phone){
+            padding: 5rem;
         }
 
         .container{
-            width: 50rem;
-            text-align: center;
 
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .logo-container{
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-
-            .logo{
-                height: 7rem;
-            }
-        }
-    }
-
-    &__team{
-        background-color: $background-grey;
-
-        &--heading{
-            text-align: center;
-            margin-bottom: 7rem;
-        }
-
-        &--container{
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-            grid-gap: 2rem;
+            grid-template-columns: repeat(2, [col-start] 1fr [col-end]);
 
-            .member{
-                width: max-content;
-                justify-self: center;
+            @include response(phone){
+                grid-template-columns: [col-start] 1fr [col-end];
+                grid-template-rows: repeat(2, [row-start] min-content [row-end]);
+            }
+        }
+        &--content{
+            grid-column: col-start 1 / col-end 1;
 
-                .img-container{
-                    margin-bottom: 1rem;
-                }
+            @include response(phone){
+                grid-column: col-start / col-end;
+                grid-row: row-start 1 / row-end 1;
+            }
 
-                &__designation{
-                    font-size: 1.5rem;
+            .list{
+                margin-left: 1.7rem;
+                .item{
+                    font-size: 1.6rem;
+                    // line-height: 1.6;
                 }
             }
         }
+        &--image{
+            grid-column: col-start 2 / col-end 2;
 
-        &--box{
-            margin-top: 4rem;
-            display: flex;
-            justify-content: center;
-        }
-    }
-
-    &__family{
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        &--logo-container{
-            width: 80%;
-            padding: 8rem 0;
-
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            gap: 3em;
-
-            .logo{
-                height: 6rem;
+            @include response(phone){
+                grid-column: col-start / col-end;
+                grid-row: row-start 2 / row-end 2;
             }
+
+            .img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+        &--btn-container{
+            display: flex;
+            justify-content: center;
         }
     }
 }
