--- a/styles/pages/about/about.css
+++ b/styles/pages/about/about.css
@@ -527,6 +527,7 @@ $breakpoint arguments choice:
 }
 
 .about__us--info .img {
+  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
