home slider, counter, brands

--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -1,5 +1,9 @@
 @import "../../global.scss";
 @import "./who-we-are";
+@import "./our-impact";
+@import "./home-highlight";
+@import "./people-say";
+@import "./home-partnerships";
 
 .header-section {
     nav {
