--- a/styles/pages/home/_who-we-are.scss
+++ b/styles/pages/home/_who-we-are.scss
@@ -1,9 +1,13 @@
 @import "../../global.scss";
 
 .who-we-are{
-    padding: 5% 0;
+    padding: 5% 0 5% 0;
+    background-image: url("../../../assets/who-we-are-bg.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
     @media screen and (max-width: 600px) {
         margin-top: 5%;
+        padding: 5% 0 0 0;
     }
     .who-we-are-header{
         margin: 0 auto;
@@ -36,7 +40,7 @@
                 padding: 1.5% 2%;
                 font-size: calc(10px + 0.6vw);
                 color: $secondary;
-                background-color: $white;
+                background-color: inherit;
                 text-transform: uppercase;
                 border-radius: 10px;
                 font-weight: 500;
@@ -78,20 +82,228 @@
         }
         .what-we-do-body{
             padding: 5% 0;
-            background-color: antiquewhite;
+            @media screen and (max-width: 600px) {
+                padding: 5% 0 0 0;
+            }
             .inspire-grid{
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-auto-flow: dense;
+                // min-height: 50vh;
+                @media screen and (max-width: 600px) {
+                    grid-template-columns: 1fr;
+                } 
+                .inspire-left{
+                    background-color: $gridOne;
+                    padding: 10%;
+                    opacity: 0;
+                    transition: 0.3s;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 2;
+                    }
+                    p{
+                        color: $white;
+                        font-size: calc(10px + 0.5vw);
+                        @media screen and (max-width:600px) {
+                            font-size: 15px;
+                        }
+                    }
+                    ol{
+                        margin: 2.5% 0 0 2.5%;
+                        li{
+                            color: $white;
+                            margin-top: 1%;
+                            font-size: calc(8px + 0.5vw);
+                            @media screen and (max-width:600px) {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+                .inspire-right{
+                    padding: 10%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: start;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 1;
+                    }
+                    .inspire-image-number{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        .leaf-img{
+                            img{
+                                
+                                width: 100%;
+                                cursor: pointer;
+                            }
+                        }
+                        .leaf-title{
+                            margin-left: 5%;
+                            h2{
+                                font-weight: 500;
+                                font-size: calc(50px + 2vw);
+                                color: $secondary;
+                                border-bottom: 3px solid $secondary;
+                                width: fit-content;
+                            }
+                            h3{
+                                color: $secondary;
+                                font-size: calc(24px + 1.5vw);
+                                font-weight: 500;
+                            }
+                        }
+                    }
+                }
+            }
+            .educate-grid{
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 grid-auto-flow: dense;
                 @media screen and (max-width: 600px) {
                     grid-template-columns: 1fr;
                 } 
-                .inspire-left{
-                    background-color: red;
-                    padding: 5%;
+                .educate-left{
+                    padding: 10%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: end;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 1;
+                    }
+                    .educate-image-number{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        .leaf-img{
+                            img{
+                                
+                                width: 100%;
+                                cursor: pointer;
+                            }
+                        }
+                        .leaf-title{
+                            margin-left: 5%;
+                            h2{
+                                font-weight: 500;
+                                font-size: calc(50px + 2vw);
+                                color: $secondary;
+                                border-bottom: 3px solid $secondary;
+                                width: fit-content;
+                            }
+                            h3{
+                                color: $secondary;
+                                font-size: calc(24px + 1.5vw);
+                                font-weight: 500;
+                            }
+                        }
+                    }
                 }
-                .inspire-right{
-                    background-color: black;
+                .educate-right{
+                    background-color: $secondary;
+                    padding: 10%;
+                    opacity: 0;
+                    transition: 0.3s;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 2;
+                    }
+                    p{
+                        color: $white;
+                        font-size: calc(10px + 0.5vw);
+                        @media screen and (max-width:600px) {
+                            font-size: 15px;
+                        }
+                    }
+                    ol{
+                        margin: 2.5% 0 0 2.5%;
+                        li{
+                            color: $white;
+                            margin-top: 1%;
+                            font-size: calc(8px + 0.5vw);
+                            @media screen and (max-width:600px) {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+            }
+            .create-grid{
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-auto-flow: dense;
+                // min-height: 50vh;
+                @media screen and (max-width: 600px) {
+                    grid-template-columns: 1fr;
+                } 
+                .create-left{
+                    background-color: $gridThree;
+                    padding: 10%;
+                    opacity: 0;
+                    transition: 0.3s;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 2;
+                    }
+                    p{
+                        color: $white;
+                        font-size: calc(10px + 0.5vw);
+                        @media screen and (max-width:600px) {
+                            font-size: 15px;
+                        }
+                    }
+                    ol{
+                        margin: 2.5% 0 0 2.5%;
+                        li{
+                            color: $white;
+                            margin-top: 1%;
+                            font-size: calc(8px + 0.5vw);
+                            @media screen and (max-width:600px) {
+                                font-size: 15px;
+                            }
+                        }
+                    }
+                }
+                .create-right{
+                    padding: 10%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: start;
+                    @media screen and (max-width: 600px) {
+                        opacity: 1;
+                        grid-row: 1;
+                    }
+                    .create-image-number{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        .leaf-img{
+                            img{
+                                
+                                width: 100%;
+                                cursor: pointer;
+                            }
+                        }
+                        .leaf-title{
+                            margin-left: 5%;
+                            h2{
+                                font-weight: 500;
+                                font-size: calc(50px + 2vw);
+                                color: $secondary;
+                                border-bottom: 3px solid $secondary;
+                                width: fit-content;
+                            }
+                            h3{
+                                color: $secondary;
+                                font-size: calc(24px + 1.5vw);
+                                font-weight: 500;
+                            }
+                        }
+                    }
                 }
             }
         }
