--- a/styles/slick.css
+++ b/styles/slick.css
@@ -99,4 +99,45 @@
 .slick-arrow.slick-hidden {
   display: none;
 }
+
+.slick-dots {
+  position: absolute;
+  bottom: -10%;
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 2px;
+  height: 2px;
+  padding: 4px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  outline: none;
+  background: #222;
+  border-radius: 50%;
+  opacity: 0.5;
+}
+
+.slick-dots .slick-active button {
+  opacity: 1;
+}
 /*# sourceMappingURL=slick.css.map */
