--- a/styles/pages/home/home.scss
+++ b/styles/pages/home/home.scss
@@ -4,6 +4,7 @@
 @import "./home-highlight";
 @import "./people-say";
 @import "./home-partnerships";
+@import "../../components/footer";
 
 .header-section {
     nav {
