--- a/styles/pages/home/home.css
+++ b/styles/pages/home/home.css
@@ -41,7 +41,6 @@ $breakpoint arguments choice:
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-weight: 700;
@@ -1857,138 +1856,6 @@ body {
      object-fit: contain;
 }
 
-/*
-0 - 430px;       small-phone
-430 - 568px:     medium-phone
-568 - 600px:     phone
-600 - 1000px:    tablet portrait
-900 - 1300px:    tablet landscape
-[1300 - 1800px] is where normal style apply
-1800px + :       Big desktop
-*/
-/*
-$breakpoint arguments choice:
-- s-phone
-- M-phone
-- phone
-- tab-port
-- tab-land
-- big-desktop
-*/
-/*
-0 - 430px;       small-phone
-430 - 568px:     medium-phone
-568 - 600px:     phone
-600 - 1000px:    tablet portrait
-900 - 1300px:    tablet landscape
-[1300 - 1800px] is where normal style apply
-1800px + :       Big desktop
-*/
-/*
-$breakpoint arguments choice:
-- s-phone
-- M-phone
-- phone
-- tab-port
-- tab-land
-- big-desktop
-*/
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 3.5rem;
-}
-
-h3 {
-  font-size: 2.7rem;
-}
-
-h4 {
-  font-size: 2rem;
-}
-
-h5 {
-  font-size: 1.8rem;
-}
-
-h6 {
-  font-size: 1.3rem;
-}
-
-p {
-  color: #222222;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-
-.mb-3 {
-  margin-bottom: 3rem;
-}
-
-.mt-1 {
-  margin-top: 1rem;
-}
-
-.mt-2 {
-  margin-top: 2rem;
-}
-
-.mt-3 {
-  margin-top: 3rem;
-}
-
-.container-1 {
-  padding: 10rem;
-}
-
-@media (max-width: 40em) {
-  .container-1 {
-    padding: 5rem;
-  }
-}
-
-.text-center {
-  text-align: center;
-}
-
-.author-title {
-  color: #fff;
-  font-size: calc(8px + 1.5vw);
-  font-weight: 500;
-}
-
-@media screen and (max-width: 600px) {
-  .author-title {
-    font-size: 14px;
-  }
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif;
-  line-height: 1.5;
-  overflow-x: hidden;
-}
-
 .header-section nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2115,6 +1982,11 @@ body {
   .header-banner .header-banner-content h2 {
     font-size: 16px;
   }
+}
+
+.header-banner .header-banner-content p {
+  font-size: calc(8px + 1vw);
+  margin-top: 2.5%;
 }
 
 .person-slider {
